fix: remove Java 21 APIs leaked into agent/server/starter modules
PR #162 made argus-core/argus-cli compile under --release 11 and set
the agent/server/starter modules to --release 17, but it missed
several Java 21-only API call sites in those higher-baseline modules.
master CI on the previous merge went red across all 6 build cells:

  argus-server/analysis/{CorrelationAnalyzer,MetaspaceAnalyzer,
  AllocationAnalyzer,CPUAnalyzer,GCAnalyzer}.java + state/
  {ThreadEventsBuffer,RecentEventsBuffer}.java
    - List.removeFirst() (Java 21+) → list.remove(0)

  argus-server/handler/ArgusChannelHandler.java
    - Thread.ofPlatform()...start(...) (Java 21+) → traditional
      `new Thread(runnable, name)` + setDaemon/start
    - Thread.threadId() (Java 19+) → Thread.getId()
    - Thread.isVirtual() (Java 21+) → reflective isVirtualThread
      helper that returns false on Java 17/20 and the real value on
      Java 21+

  argus-agent/jfr/JfrStreamingEngine.java
    - Thread.ofPlatform()...start(...) → new Thread + setDaemon/start

  argus-agent/jfr/ExecutionSampleExtractor.java
    - List.getFirst() → list.get(0)

  argus-agent/jfr/JfrEventExtractor.java
    - RecordedThread.isVirtual() (Java 21+) → reflective
      isVirtualRecordedThread helper, false on pre-21

  argus-spring-boot-starter/.../ArgusAutoConfiguration.java
    - Thread.ofPlatform()...start(...) → new Thread + setDaemon/start

The reflective virtual-thread helpers preserve correct behaviour on
Java 21+ runtimes (where the dashboard genuinely should report
isVirtual) while letting the modules compile under their declared
--release 17 baseline.

Verified: ./gradlew clean build → BUILD SUCCESSFUL.
Signed-off-by: rlaope <piyrw9754@gmail.com>