@@ -73,7 +73,7 @@ public final class AllocationAnalyzer {
             );
             history.add(snapshot);
             while (history.size() > MAX_HISTORY_SIZE) {
-                history.removeFirst();
+                history.remove(0);
             }
 
             // Reset window
